# moonbot-rs

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example
.github/workflows/: build.yml  linters.yml  release.yml
crates/moonbot/: Cargo.toml
crates/moonbot/src/: commands.rs  context.rs  handlers.rs  main.rs  utils.rs
crates/moonbot/src/commands/: meta.rs  music.rs  openai.rs  profile_admin.rs  roleplay.rs  userdir.rs  userdir_admin.rs
crates/moonbot/src/handlers/: lavalink.rs  openai.rs
crates/moonbot_config/: Cargo.toml
crates/moonbot_config/src/: config.rs
crates/moonbot_db/: Cargo.toml
crates/moonbot_db/src/: lib.rs
crates/moonbot_db/src/entities/: bot_disposition.rs  channel_prompt.rs  channel_roleplay.rs  guild_roleplay.rs  mod.rs  prelude.rs  user_directory.rs  user_insight.rs
crates/moonbot_migrations/: Cargo.toml
crates/moonbot_migrations/src/: lib.rs  m20220101_000001_guild_table.rs  m20250903_000001_channel_prompt_table.rs  m20250904_000001_global_prompt_table.rs  m20250904_000002_bot_disposition_table.rs  m20250904_000003_user_insight_table.rs  m20250905_000001_user_directory_rag.rs  m20250905_000002_channel_roleplay_table.rs  m20250905_000004_guild_roleplay_table.rs  m20250905_000005_corpus_rag.rs
crates/sunbot/: Cargo.toml  build.rs
crates/sunbot/src/: commands.rs  handlers.rs  main.rs  utils.rs
crates/sunbot/src/commands/: meta.rs  music.rs  openai.rs  register.rs
crates/sunbot/src/handlers/: dad.rs  lavalink.rs  openai.rs
crates/sunbot_config/: Cargo.toml
crates/sunbot_config/src/: config.rs  lib.rs
crates/sunbot_db/: Cargo.toml
crates/sunbot_db/src/: lib.rs
crates/sunbot_db/src/entities/: global_prompt.rs  guild.rs  mod.rs  prelude.rs  user.rs
crates/sunbot_db/src/services/: user_service.rs
crates/sunbot_migrations/: Cargo.toml
crates/sunbot_migrations/src/: lib.rs  m20240101_000002_user_table.rs  main.rs
