[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/sunbot"]

[workspace.dependencies]
toml = "0.8.19"
once_cell = "1.19.0"
tracing = "0.1"
tracing-subscriber = "0.3.18"
sysinfo = "0.31.4"
humantime = "2.1"
regex = "1.10"
lazy_static = "1.5"
rand = "0.8"
sentry = "0.34.0"
async-openai = "0.24.1"
serde_json = "1"
futures = "0.3"

[workspace.dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serenity]
version = "0.12"
default-features = false
features = ["default_native_tls", "voice"]

[workspace.dependencies.poise]
version = "0.6"
default-features = false
features = ["cache", "chrono"]
# handle_panics

[workspace.dependencies.songbird]
version = "0.4"
default-features = false
features = ["gateway", "serenity", "native"]

[workspace.dependencies.lavalink-rs]
version = "0.13.0"
default-features = false
features = ["songbird", "serenity", "native-tls", "macros"]
