[workspace]
members = ["crates/*"]
resolver = "2"
default-members = ["crates/sunbot"]

[workspace.dependencies]
toml = "0.8.19"
once_cell = "1.20.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sysinfo = "0.32.1"
humantime = "2.1"
regex = "1.11.1"
lazy_static = "1.5.0"
rand = "0.8"
sentry = "0.35.0"
sentry-tracing = "0.35.0"
async-openai = "0.26.0"
serde_json = "1.0.133"
futures = "0.3.31"
base64 = "0.22.1"

[workspace.dependencies.tokio]
version = "1.41.1"
features = ["macros", "rt-multi-thread"]

[workspace.dependencies.serde]
version = "1.0.215"
features = ["derive"]

[workspace.dependencies.serenity]
version = "0.12.4"
default-features = false
features = ["default_native_tls", "voice", "chrono"]

[workspace.dependencies.poise]
version = "0.6"
default-features = false
features = ["cache", "chrono"]
# handle_panics

[workspace.dependencies.songbird]
version = "0.4.5"
default-features = false
features = ["gateway", "serenity", "native"]

[workspace.dependencies.lavalink-rs]
version = "0.13.0"
default-features = false
features = ["songbird", "serenity", "native-tls", "macros"]

[workspace.dependencies.sea-orm]
version = "1.1.1"
features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros"]
