[package]
name = "moonbot"
version = "0.3.3"
edition = "2021"
build = "build.rs"

[dependencies]
moonbot_config = { path = "../sunbot_config" }
moonbot_db = { path = "../sunbot_db" }
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serenity.workspace = true
poise.workspace = true
lavalink-rs.workspace = true
sysinfo.workspace = true
humantime.workspace = true
regex.workspace = true
lazy_static.workspace = true
rand.workspace = true
sentry.workspace = true
sentry-tracing.workspace = true
async-openai.workspace = true
songbird.workspace = true
serde_json.workspace = true
futures.workspace = true
sea-orm.workspace = true
base64.workspace = true

[build-dependencies]
built = {version = "0.7.6", features = ["cargo-lock", "chrono", "dependency-tree"]}
