[package]
name = "sunbot_db"
version = "0.3.2"
edition = "2021"
publish = false

[lib]
name = "sunbot_db"
path = "src/lib.rs"

[dependencies]
sunbot_migrations = { path = "../sunbot_migrations" }
tokio.workspace = true
sea-orm.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono = { version = "0.4", features = ["serde"] }
