[package]
name = "sunbot_migrations"
version = "0.3.2"
edition = "2021"
publish = false

[lib]
name = "sunbot_migrations"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "1.1.1"
features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls"]
